@@ -1,3 +1,8 @@
+2011-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc:
+	  Improved handling of HL.
+	  
 2011-01-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc2.cc:
